--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="bg_pattern">  </div>
+    <app-root></app-root>
+
 </body>
 </html>
